--- a/css/components/about.css
+++ b/css/components/about.css
@@ -1,3 +1,118 @@
-#about-section{
-    height: 100vh;
+#about-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 100px;
+}
+
+/* story */
+.story {
+  display: flex;
+  align-items: center;
+}
+.text-content {
+  display: flex;
+  flex-direction: column;
+  width: 500px;
+  justify-content: center;
+}
+.about-visual-h1 {
+  font-size: 40px;
+  font-weight: 700;
+  font-family: var(--font-azeret-mono);
+}
+.about-visual-p {
+  line-height: 40px;
+  font-family: var(--font-azeret-mono);
+}
+.story-img-div {
+  height: 300px;
+}
+.story-img-div img {
+  width: 100%;
+  height: 100%;
+}
+
+/* vision */
+.vision {
+  display: flex;
+  align-items: center;
+  flex-direction: row-reverse;
+}
+.vision-img-div {
+  height: 300px;
+  margin-right: 20px;
+}
+.vision-img-div img {
+  width: 100%;
+  height: 100%;
+}
+
+/* values */
+.values {
+  margin-bottom: 200px;
+  width: 100%;
+  justify-content: center;
+  display: flex;
+}
+.value-cards {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+.value-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 30px;
+  padding: 40px;
+}
+.value-card img {
+  object-fit: cover;
+}
+
+.value-p {
+  text-align: center;
+  max-width: 350px;
+}
+
+/* media querties */
+@media (max-width: 940px) {
+  .text-content {
+    width: 400px;
+  }
+}
+@media (max-width: 840px) {
+  .story {
+    flex-direction: column-reverse;
+    text-align: center;
+  }
+  .vision {
+    flex-direction: column-reverse;
+    text-align: center;
+  }
+  .text-content {
+    width: 500px;
+  }
+}
+@media (max-width: 500px) {
+  .text-content {
+    width: 90%;
+  }
+}
+@media (max-width: 900px) {
+  .value-cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  .card-3 {
+    grid-column: span 2;
+  }
+}
+@media (max-width: 500px) {
+  .value-cards {
+    display: flex;
+    flex-direction: column;
+  }
 }
