--- a/css/global.css
+++ b/css/global.css
@@ -2,7 +2,8 @@
     /* Colors */
     --primary-color: #4F46E5;
     --secondary-color: #6366F1;
-    --background-color: linear-gradient(45deg, #551bac, #315dc4);
+    --background-color: #093142;
+    /* linear-gradient(115deg, #62cff4, #2c67f2); linear-gradient(45deg, #08265d 0, #104cba 45%);  brown;  linear-gradient(45deg, #551bac, #315dc4); */
     --text-color: white;
     --accent-color: #EC4899;
     --cta-btn-bgC: orange;
@@ -23,12 +24,20 @@
     padding: 0;
 }
 
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
 /* Set Up Body */
 body {
     font-family: var(--font-body);
     color: var(--text-color);
     line-height: 1.6;
     overflow-x: hidden;
+    background: var(--background-color);
+    background-attachment: fixed; /* Keeps the gradient consistent */
+    background-size: cover; /* Ensures it fills the entire screen */
 }
 
 /* Links */
