--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,7 @@
 @import url("components/navbar.css");
 @import url("components/hero.css");
 @import url("components/about.css");
+@import url("components/services.css");
+@import url("components/booking.css");
+
 
