--- a/css/styles.css
+++ b/css/styles.css
@@ -3,5 +3,7 @@
 @import url("components/about.css");
 @import url("components/services.css");
 @import url("components/booking.css");
+@import url("components/footer.css");
+
 
 
