--- a/css/components/hero.css
+++ b/css/components/hero.css
@@ -1,24 +1,73 @@
 #hero-section {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  /* height: 100vh; */
+}
+.hero-container {
+  display: flex;
+  align-items: center;
+}
+.hero{
+  padding: 0 10px 0 10px;
+}
+.bot-animation {
+  background-color: var(--animation-bg);
+  height: 400px;
+  padding: 15px;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 100px;
-
-}
-.hero {
+  position: relative;
+  display: flex;
+  position: relative;
+  z-index: 10;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+}
+.animation-svg {
+  animation: float-animation 5s infinite ease-in-out;
+  color: var(--svg-color);
+  animation: float-animation 3s infinite ease-in-out;
+  background-color: var(--svg-bg);
+  border-radius: 100%;
+  padding: 20px;
+}
+.animation-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+@keyframes float-animation {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-20px);
+  } 
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.hero {
+  display: flex;
+  flex-direction: column;
 }
 
 /* custom text */
 .custom {
-  background-color: var(--dark-bg-color);
+  width: fit-content;
+  background-color: var(--animation-bg);
   padding: 10px 30px 10px 30px;
   border-radius: 10px;
-  margin-bottom: 20px;
-  font-size: clamp(7px, 1vw, 10px);
+  font-size: clamp(10px, 1vw, 12px);
+  color: var(--third-color);
 }
 .custom span {
   font-family: var(--font-azeret-mono);
@@ -30,28 +79,74 @@
   font-family: syne, sans-serif;
   font-size: clamp(24px, 5vw, 50px);
   color: var(--text-color);
-  text-align: center;
   font-family: var(--font-azeret-mono);
   text-shadow: var(--yellow-shadow-effect);
 }
 .hero-h2 {
-  font-family: syne, sans-serif; /* azeret-mono, "azeret mono", monospace; */
-  font-size: clamp(24px, 5vw, 70px);
+  font-size: clamp(24px, 5vw, 40px);
   font-weight: 300;
   color: var(--text-color);
-  text-align: center;
-  margin: 25px 0 40px 0;
+  margin: 0 0 40px 0;
   font-weight: 700;
+  width: 600px;
+}
+.hero-h2-span {
+  color: var(--third-color);
+  /* text-shadow: var(--hero-h2-shadow); */
+}
+.cta-div {
+  display: flex;
+  gap: 10px;
+}
+.cta-div button {
+  font-size: clamp(12px, 2vw, 25px);
+  display: flex;
+  align-items: center;
+}
+.get-started-btn {
+  border: solid white;
+  background-color: inherit;
 }
 /* ^^^^^^^^^^^ */
 
 /* media queries */
+@media (min-width: 1071px) {
+  #hero-section {
+    margin-top: 100px;
+  }
+}
+@media (max-width: 1070px) {
+  .hero-container {
+    flex-direction: column;
+  }
+  .hero {
+    align-items: center;
+    text-align: center;
+  }
+  .bot-animation {
+    margin-top: 50px;
+    width: clamp(100px, 70vw, 600px);
+  }
+  .hero-h2 {
+    width: fit-content;
+    margin-top: 0;
+    font-weight: 700;
+    margin-top: 30px;
+    font-size: clamp(24px, 6vw, 60px);
+  }
+  #hero-section {
+    margin-top: 50px;
+  }
+}
 @media (max-width: 350px) {
   .hero-h2 {
     font-size: 20px;
   }
   .hero button {
     width: 150px;
+  }
+  .cta-div{
+    flex-direction: column;
   }
 }
 @media (max-width: 305px) {
