--- a/css/components/services.css
+++ b/css/components/services.css
@@ -1,50 +1,67 @@
-/* services */
-.values {
-  margin-bottom: 100px;
-  width: 100%;
-  justify-content: center;
-  display: flex;
-  margin-top: 100px;
-}
-.value-cards {
-  display: flex;
-  width: 100%;
-  justify-content: center;
-  overflow: hidden;
-}
-.value-card {
+#services-section {
   display: flex;
   flex-direction: column;
   align-items: center;
-  row-gap: 30px;
-  padding: 40px;
+  margin-top: 100px;
+}
+.comp-h1 {
+  font-size: clamp(24px, 5vw, 40px);
+  font-weight: 300;
+  color: var(--third-color);
+  font-weight: 700;
   text-align: center;
 }
-.value-card img {
-  object-fit: cover;
-}
-.value-card h3{
-    font-family: var(--font-azeret-mono);
-}
-.value-p {
+.h3-ai {
+  font-size: clamp(24px, 5vw, 40px);
+  font-weight: 300;
+  font-weight: 700;
   text-align: center;
-  max-width: 350px;
-  font-family: var(--font-azeret-mono);
+}
+.p-desc {
+  color: var(--gray-text);
+  text-align: center;
+  padding: 0 15px 0 15px;
 }
 
-/* media querties */
-@media (max-width: 900px) {
-  .value-cards {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-  }
-  .card-3 {
-    grid-column: span 2;
+/* cards */
+.cards-div {
+  margin-top: 50px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+  padding: 0 20px 0 20px;
+}
+.card {
+  background-color: var(--animation-bg);
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 20px;
+  max-width: 400px;
+  border-radius: 10px;
+}
+.card svg {
+  color: var(--third-color);
+}
+.card:hover {
+  transform: translateY(-0.5rem);
+}
+.card-text{
+  color: var(--gray-text);
+}
+/*  */
+
+/* media query */
+/* Medium screens: display 2 columns */
+@media (max-width: 920px) {
+  .cards-div {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
-@media (max-width: 500px) {
-  .value-cards {
-    display: flex;
-    flex-direction: column;
+
+/* Small screens: display 1 column */
+@media (max-width: 620px) {
+  .cards-div {
+    grid-template-columns: 1fr;
   }
 }
