--- a/css/components/hero.css
+++ b/css/components/hero.css
@@ -8,7 +8,7 @@
   display: flex;
   align-items: center;
 }
-.hero{
+.hero {
   padding: 0 10px 0 10px;
 }
 .bot-animation {
@@ -37,6 +37,23 @@
   border-radius: 100%;
   padding: 20px;
 }
+.ani-svg-1 {
+  position: absolute;
+  top: 14.2857%; /* Approximately 1/7 of the container's height */
+  left: 0;
+}
+.ani-svg-2 {
+  position: absolute;
+  bottom: 14.2857%; /* Approximately 1/7 of the container's height */
+  right: 0;
+}
+.ani-h3 {
+  text-align: center;
+}
+.ani-p {
+  text-align: center;
+  color: var(--gray-text);
+}
 .animation-text {
   display: flex;
   justify-content: center;
@@ -49,7 +66,7 @@
   }
   50% {
     transform: translateY(-20px);
-  } 
+  }
   100% {
     transform: translateY(0);
   }
@@ -145,7 +162,7 @@
   .hero button {
     width: 150px;
   }
-  .cta-div{
+  .cta-div {
     flex-direction: column;
   }
 }
