added contact section

--- a/css/components/hero.css
+++ b/css/components/hero.css
@@ -120,7 +120,7 @@
   display: flex;
   align-items: center;
 }
-.get-started-btn {
+.explore-btn {
   border: solid white;
   background-color: inherit;
 }
