--- a/css/components/about.css
+++ b/css/components/about.css
@@ -39,6 +39,10 @@
   border-radius: 10px;
   margin: 10px;
 }
+.about-card:hover {
+  transform: translateY(-0.5rem);
+}
+
 .card-text {
   color: var(--gray-text);
 }
@@ -66,6 +70,7 @@
   display: flex;
   flex-direction: row;
   gap: 10px;
+  text-align: left;
 }
 /* media query */
 @media (max-width: 1045px) {
