--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,8 @@
 @import url("components/hero.css");
 @import url("components/about.css");
 @import url("components/services.css");
+@import url("components/contact.css");
+
 
 
 
