--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 @import url("components/about.css");
 @import url("components/services.css");
 @import url("components/contact.css");
-
+@import url("components/footer.css");
 
 
 
