--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   padding: 50px;
-  border-top: solid;
+  border-top: 0.5px solid var(--boder-color);
   margin-top: 100px;
 }
 .footer__h1 {
