--- a/css/components/navbar.css
+++ b/css/components/navbar.css
@@ -1,11 +1,16 @@
 #nav-section {
   color: var(--text-color);
+  display: flex;
+  justify-content: center;
 }
 .nav {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: flex-end;
   align-items: center;
   padding: 20px;
+  width: 1150px;
+  border-bottom: 0.5px solid var(--boder-color);
+  margin: 0 20px 0 20px;
 }
 
 /* toggles */
@@ -24,14 +29,16 @@
 /* others */
 .logo {
   font-size: 25px;
+  margin-right: auto;
 }
-.logo-img{
+.logo-img {
   height: 60px;
 }
 .nav-center {
   display: flex;
   gap: 30px;
   font-size: 20px;
+  margin-right: 30px;
 }
 .underline-animation {
   position: relative;
