--- a/css/components/hero.css
+++ b/css/components/hero.css
@@ -75,6 +75,8 @@
 .hero {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 
 /* custom text */
@@ -100,12 +102,12 @@
   text-shadow: var(--yellow-shadow-effect);
 }
 .hero-h2 {
-  font-size: clamp(24px, 5vw, 40px);
+  font-size: clamp(24px, 5vw, 60px);
   font-weight: 300;
   color: var(--text-color);
   margin: 0 0 40px 0;
   font-weight: 700;
-  width: 600px;
+  /* width: 600px; */
 }
 .hero-h2-span {
   color: var(--third-color);
