--- a/css/components/navbar.css
+++ b/css/components/navbar.css
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  padding: 20px;
+  padding: 20px 20px 0 20px;
   width: 1150px;
   border-bottom: 0.5px solid var(--boder-color);
   margin: 0 20px 0 20px;
