new changes to hero section

--- a/css/components/hero.css
+++ b/css/components/hero.css
@@ -102,15 +102,21 @@
   text-shadow: var(--yellow-shadow-effect);
 }
 .hero-h2 {
-  font-size: clamp(20px, 4vw, 70px);
+  font-size: clamp(25px, 4vw, 70px);
   color: var(--text-color);
-  margin: 40px 0 40px 0;
-  line-height: 2;
+  margin: 40px 0 0 0;
+  /* line-height: 2; */
 }
 .hero-h2-span {
   color: var(--third-color);
   /* text-shadow: var(--hero-h2-shadow); */
 }
+
+.hero-h2-b-t{
+  font-size: clamp(18px, 4vw, 30px);
+  margin: 20px 0 50px 0;
+}
+
 .cta-div {
   display: flex;
   gap: 10px;
